--- a/chatUi/index.html
+++ b/chatUi/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chat</title>
+    <title>go iris 中文网</title>
     <link rel="stylesheet" href="./bootstrap-4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./fontawesome5.13.0/css/all.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./css/jquery.mCustomScrollbar.min.css">
     <script src="./js/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/jquery.mCustomScrollbar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script src="./js/index.js"></script>
 </head>
 <!--Coded With Love By Mutiullah Samim-->
@@ -33,7 +34,7 @@
                                     <span class="online_icon"></span>
                                 </div>
                                 <div class="user_info">
-                                    <span>Khalid</span>
+                                    <span>873908960@qq.com</span>
                                     <p>Kalid is online</p>
                                 </div>
                             </div>
