--- a/chatUi/index.html
+++ b/chatUi/index.html
@@ -30,7 +30,7 @@
                         <li class="active">
                             <div class="d-flex bd-highlight">
                                 <div class="img_cont">
-                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
+                                    <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img" alt="">
                                     <span class="online_icon"></span>
                                 </div>
                                 <div class="user_info">
@@ -42,7 +42,7 @@
                         <li>
                             <div class="d-flex bd-highlight">
                                 <div class="img_cont">
-                                    <img src="./img/2.jpeg" class="rounded-circle user_img">
+                                    <img src="./img/2.jpeg" class="rounded-circle user_img" alt="">
                                     <span class="online_icon offline"></span>
                                 </div>
                                 <div class="user_info">
@@ -61,7 +61,7 @@
                 <div class="card-header msg_head">
                     <div class="d-flex bd-highlight">
                         <div class="img_cont">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
+                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img" alt="">
                             <span class="online_icon"></span>
                         </div>
                         <div class="user_info">
@@ -86,7 +86,7 @@
                 <div class="card-body msg_card_body">
                     <div class="d-flex justify-content-start mb-4">
                         <div class="img_cont_msg">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg" alt="">
                         </div>
                         <div class="msg_cotainer">
                             Hi, how are you samim?
@@ -100,14 +100,14 @@
                             <span class="msg_time_send">8:55 AM, Today</span>
                         </div>
                         <div class="img_cont_msg">
-                            <img src="./img/2.jpeg" class="rounded-circle user_img_msg">
+                            <img src="./img/2.jpeg" class="rounded-circle user_img_msg" alt="">
                         </div>
                     </div>
 
 
                     <div class="d-flex justify-content-start mb-4">
                         <div class="img_cont_msg">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg" alt="">
                         </div>
                         <div class="msg_cotainer">
                             I am good too, thank you for your chat template
@@ -120,12 +120,12 @@
                             <span class="msg_time_send">9:05 AM, Today</span>
                         </div>
                         <div class="img_cont_msg">
-                            <img src="./img/2.jpeg" class="rounded-circle user_img_msg">
+                            <img src="./img/2.jpeg" class="rounded-circle user_img_msg" alt="">
                         </div>
                     </div>
                     <div class="d-flex justify-content-start mb-4">
                         <div class="img_cont_msg">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg" alt="">
                         </div>
                         <div class="msg_cotainer">
                             I am looking for your next templates
