--- a/chatUi/login.html
+++ b/chatUi/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="utf-8">
 <head>
     <title>Chat</title>
     <link rel="stylesheet" href="./bootstrap-4.4.1/css/bootstrap.min.css">
@@ -8,8 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./css/jquery.mCustomScrollbar.min.css">
     <script src="./js/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/jquery.mCustomScrollbar.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/http_cdnjs.cloudflare.com_ajax_libs_socket.io_2.0.3_socket.io.js"></script>
 </head>
 <body>
     <div class="container-fluid h-100">
